--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -30,6 +30,7 @@
             <div id="mtr-input-url"  class="form-group">
                 <label>URL地址：</label>
                 <input type="text" class="form-control" id="Tmtr_url" placeholder="请输入URL地址">
+                <small class="tips"><i class="fa fa-info-circle" >&nbsp例:http://www.baidu.com</i></small>
             </div>
 
         </div>
