2016-09-13 cxb 配置信息合并

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 <!-- upload按钮-->
 <input id="file" name="file" type="file" multiple accept="image/*, audio/*, video/*"/>
 
+<!-- config-->
+<script type='text/javascript' src="resources/js/config.js"></script>
+
 <!-- jQuery 2.2.0 -->
 <script src="resources/plugins/jQuery/jQuery-2.2.0.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
