--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <!-- 全屏弹层区域 -->
     <section id="cover_area"></section>
     <section id="cover_area2"></section>
+    <section id="cover_area_preview"></section>
     <!-- =============================================== -->
 
     <!-- Left side column. contains the sidebar -->
@@ -125,8 +126,8 @@
     <!-- /.content-wrapper -->
 
     <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-            <b>Version</b> 3.0.1
+        <div id="i_version" class="pull-right hidden-xs">
+            <b>Version</b>&nbsp;<span></span>
         </div>
         <!--<strong><a href="http://www.cleartv.cn">清鹤科技</a></strong> All rights reserved.-->
         <strong>&nbsp;</strong>
