--- a/login.html
+++ b/login.html
@@ -44,6 +44,6 @@
     <!-- /.login-box-body -->
 </div>
 <!-- /.login-box -->
-<div id="l_version"><b>Version</b> 3.0.1</div>
+<div id="l_version"><b>Version</b>&nbsp;<span></span></div>
 </body>
 </html>
