--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -14,10 +14,10 @@
             <div class="form-group">
                 <label>文本类型：</label>
                 <label class="Tmtr-text-type">
-                    <input id="Tmtr-type-text" type="radio" name="r1" class="minimal" value="text" checked><label>普通文本</label>
+                    <input id="Tmtr-type-text" type="radio" name="r1" class="Tmtr-minimal" value="0" checked><label>普通文本</label>
                 </label>
                 <label class="Tmtr-text-type">
-                    <input id="Tmtr-type-url" type="radio" name="r1" class="minimal" value="url"><label>URL文本</label>
+                    <input id="Tmtr-type-url" type="radio" name="r1" class="Tmtr-minimal" value="1"><label>URL文本</label>
                 </label>
             </div>
             <div id="mtr-input-text">
