--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -14,6 +14,7 @@
                         style="width: 100%; height: 30px; padding: 0px 10px;">
                     <option selected="selected" value="Normal">常规</option>
                     <option value="Marquee">走马灯</option>
+                    <option value="WebURL">URL文本</option>
                 </select>
             </div>
             <div id="mtrC_flip" class="pull-right">
