--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -18,6 +18,7 @@
                     <li typeId="3"><a id="mtrAudio"><i class="fa fa-music"></i>  &nbsp;音频</a></li>
                     <li typeId="4"><a id="mtrText"><i class="fa fa-font"></i> &nbsp;文本</a></li>
                     <li typeId="5"><a id="mtrLive"><i class="fa fa-cloud"></i> 直播</a></li>
+                    <li typeId="6"><a id="mtrOffice"><i class="fa fa-cloud"></i> Office/PDF</a></li>
 
                     
 
