--- a/resources/pages/materials/materials_addText.html
+++ b/resources/pages/materials/materials_addText.html
@@ -17,7 +17,7 @@
                     <input id="Tmtr-type-text" type="radio" name="r1" class="Tmtr-minimal" value="0" checked><label>普通文本</label>
                 </label>
                 <label class="Tmtr-text-type">
-                    <input id="Tmtr-type-url" type="radio" name="r1" class="Tmtr-minimal" value="1"><label>URL文本</label>
+                    <input id="Tmtr-type-url" type="radio" name="r1" class="Tmtr-minimal" value="1"><label>网页地址</label>
                 </label>
             </div>
             <div id="mtr-input-text">
@@ -28,8 +28,8 @@
                 </form>
             </div>
             <div id="mtr-input-url"  class="form-group">
-                <label>URL地址：</label>
-                <input type="text" class="form-control" id="Tmtr_url" placeholder="请输入URL地址">
+                <label>网页地址：</label>
+                <input type="text" class="form-control" id="Tmtr_url" placeholder="请输入网页地址">
                 <small class="tips"><i class="fa fa-info-circle" >&nbsp例:http://www.baidu.com</i></small>
             </div>
 
