--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -8,6 +8,7 @@
     <!-- /.box-header -->
     <!-- form start -->
     <form role="form" style="height: 90%;">
+        <!-- 文本控件属性 -->
         <div id="box_effect" class="box-header with-border">
             <div class="btn-group mtrCtrl_select">
                 <select id="mtrC_textType" class="form-control select2 "
@@ -60,7 +61,6 @@
                     <div class="col-sm-10"><input id="text_bgcolor" type="text" class="form-control" placeholder="请选择背景颜色"></div>
                 </div>
             </div>
-
         </div>
         <!-- 时间控件属性 -->
         <div id="box_datetimeEffect" class="box-header with-border">
@@ -82,8 +82,29 @@
                     <span class="input-group-addon">秒</span>
                 </div>
             </div>
-
         </div>
+        <!-- Office控件属性 -->
+        <div id="box_officeEffect" class="box-header with-border">
+            <div class="btn-group mtrCtrl_select">
+                <select id="mtrC_office_type" class="form-control select2 " style="width: 100%; height: 30px; padding: 0px 10px;">
+                    <option selected="selected" value="Normal">常规</option>
+                </select>
+            </div>
+            <div class="btn-group mtrCtrl_select">
+                <select id="mtrC_office_switchAnimation" class="form-control select2 " style="width: 100%; height: 30px; padding: 0px 10px;">
+                    <option selected="selected" value="None">无动画</option>
+                    <option value="Random">随机</option>
+                </select>
+            </div>
+            <div id="mtrC_flip" class="pull-right">
+                <div id="box_text_time" class="input-group">
+                    <span class="input-group-addon">切换间隔</span>
+                    <input id="mtrC_office_switchPeriod" type="number" class="form-control" min="0" placeholder="请输入">
+                    <span class="input-group-addon">秒</span>
+                </div>
+            </div>
+        </div>
+
         <div id="box_tableHeader" class="box-header with-border">
             <button type="button" class="btn btn-default btn-sm checkbox-toggle allCheck"><i class="fa fa-square-o"></i>
             </button>
@@ -141,7 +162,7 @@
                     <input id="mtrC_dtWeek" type="radio" clockType="Week" name="r3" class="flat-red rd_clock">
 
                     <div class="info-box mtrC_datetime">
-                       
+
                         <div class="info-box-content">
                             <span class="info-box-number">星期一</span>
                         </div>
