--- a/resources/pages/channel/mtrBatchOperation.html
+++ b/resources/pages/channel/mtrBatchOperation.html
@@ -9,7 +9,7 @@
     <!-- form start -->
     <form class="form-horizontal">
         <div class="box-body">
-            <div class="form-group">
+            <div class="form-group batchOperation-duration">
                 <label class="col-sm-2 control-label">播放时长</label>
 
                 <div class="col-sm-10">
@@ -26,7 +26,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-            <small class="tips" style="font-size: 12px; margin: 10px 15px;"><i class="fa fa-info-circle" >&nbsp视频和音频资源无法修改时长。</i></small>
+            <small class="tips" style="font-size: 12px; margin: 10px 15px;"><i class="fa fa-info-circle" >&nbsp视频和音频、Office、PDF资源无法修改时长。</i></small>
             <button type="submit" class="btn btn-primary pull-right" id="btn-batchSubmit">提交</button>
         </div>
         <!-- /.box-footer -->
