--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -13,12 +13,12 @@
         <div id="list_box" class="col-md-12">
             <div class="nav-tabs-custom">
                 <ul id="mtrChoise" class="nav nav-tabs">
-                    <li class="active" typeId="1"><a id="mtrVideo"><i class="fa fa-video-camera"></i> 视频</a></li>
-                    <li typeId="2"><a id="mtrImage"><i class="fa fa-image"></i> 图片</a></li>
-                    <li typeId="3"><a id="mtrAudio"><i class="fa fa-music"></i>  &nbsp;音频</a></li>
-                    <li typeId="4"><a id="mtrText"><i class="fa fa-font"></i> &nbsp;文本</a></li>
-                    <li typeId="5"><a id="mtrLive"><i class="fa fa-cloud"></i> 直播</a></li>
-                    <li typeId="6"><a id="mtrOffice"><i class="fa fa-cloud"></i> Office/PDF</a></li>
+                    <li class="active" typename="Video"><a id="mtrVideo"><i class="fa fa-video-camera"></i> 视频</a></li>
+                    <li typename="Image"><a id="mtrImage"><i class="fa fa-image"></i> 图片</a></li>
+                    <li typename="Audio"><a id="mtrAudio"><i class="fa fa-music"></i>  &nbsp;音频</a></li>
+                    <li typename="WebText"><a id="mtrText"><i class="fa fa-font"></i> &nbsp;文本</a></li>
+                    <li typename="Live"><a id="mtrLive"><i class="fa fa-cloud"></i> 直播</a></li>
+                    <li typename="Office"><a id="mtrOffice"><i class="fa fa-cloud"></i> Office/PDF</a></li>
 
                     
 
