--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -18,7 +18,7 @@
                     <li typename="Audio"><a id="mtrAudio"><i class="fa fa-music"></i>  &nbsp;音频</a></li>
                     <li typename="WebText"><a id="mtrText"><i class="fa fa-font"></i> &nbsp;文本</a></li>
                     <li typename="Live"><a id="mtrLive"><i class="fa fa-cloud"></i> 直播</a></li>
-                    <li typename="Office"><a id="mtrOffice"><i class="fa fa-cloud"></i> Office/PDF</a></li>
+                    <li typename="Office"><a id="mtrOffice"><i class="fa fa-reorder"></i> Office/PDF</a></li>
 
                     
 
