--- a/resources/pages/terminal/configOneTerm.html
+++ b/resources/pages/terminal/configOneTerm.html
@@ -285,6 +285,47 @@
                     <input id="CO-debug" type="checkbox" checked>
                 </div>
             </div>
+            <hr>
+
+            <div class="form-group">
+                <label class="col-sm-3 control-label">同步</label>
+                <div class="col-sm-9">
+                    <input id="CO-sync" type="checkbox" checked>
+                </div>
+            </div>
+            <div id="CO-syncArea" class="form-group">
+                <div class="form-group">
+                    <label class="CO-sync-label control-label col-sm-3">终端同步ID</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="CO-sync-setID" style="display: inline-block; width: 213px;">
+                        <small class="tips"><i class="fa fa-info-circle"></i>&nbsp;格式：1-1</small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="CO-sync-label control-label col-sm-3">同步组播IP</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" id="CO-sync-multicastIP" style="display: inline-block; width: 213px;">
+                        <small class="tips"><i class="fa fa-info-circle"></i>&nbsp;格式：255.1.1.1</small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="CO-sync-label control-label col-sm-3">同步端口号</label>
+                    <div class="col-sm-9">
+                        <input type="number" class="form-control" id="CO-sync-multicastPort" min="1025" style="display: inline-block; width: 213px;">
+                        <small class="tips"><i class="fa fa-info-circle"></i>&nbsp;值必须大于1024</small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="CO-sync-label control-label col-sm-3">等待命令时间</label>
+                    <div class="col-sm-9">
+                        <div class="input-group" style="width: 213px;">
+                            <input type="number" class="form-control" id="CO-sync-switchTimeout" min="1" style="display: inline-block; width: 174px;">
+                            <div class="input-group-addon">秒</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
         </form>
     </div>
     <div class="modal-footer">
