--- a/resources/pages/channel/addMtr.html
+++ b/resources/pages/channel/addMtr.html
@@ -8,8 +8,7 @@
         <button id="mtr_allCheck" type="button" class="btn btn-default btn-sm checkbox-toggle allCheck"><i class="fa fa-square-o"></i>
         </button>
         <div id="mtr_dplist" class="btn-group">
-            <select id="mtr_typeChiose" class="form-control select2"
-                    style="width: 100%; height: 30px; padding: 0px 10px;">
+            <select id="mtr_typeChiose" class="form-control select2" style="width: 100%; height: 30px; padding: 0px 10px;">
                 <option selected="selected" value=1>视频</option>
                 <option value=2>图片</option>
                 <option value=5>直播</option>
