--- a/resources/pages/materials/materials_upload.html
+++ b/resources/pages/materials/materials_upload.html
@@ -1,4 +1,4 @@
-<div id="upload_box" class="box box-primary">
+<div id="upload_box" class="modal-content">
     <div class="box-header with-border">
         <h3 class="box-title">资源上传</h3>
         <!-- 最小化和关闭 -->
@@ -23,7 +23,7 @@
                     <th style="width:40%; max-width: 240px; text-overflow: ellipsis; overflow: hidden;">文件名</th>
                     <th style="width:20%; text-align: center;">上传进度</th>
                     <th style="width:17%; text-align: center;">速度</th>
-                    <th style="width:17%; text-align: center;"></th>
+                    <th style="width:17%; text-align: center;">状态</th>
                 </tr>
             </table>
         </div>
