--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -29,6 +29,9 @@
 				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
 			</div>
             <div class="btn-group">
+                <button type="button" class="btn btn-default btn-sm btn-export-offline">导出离线包</button>
+            </div>
+            <div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm" id="chn_submit">提交审核</button>
 				<button type="button" class="btn btn-default btn-sm" id="chn_pass">审核通过</button>
 				<button type="button" class="btn btn-default btn-sm" id="chn_unpass">审核不通过</button>
