--- a/login.html
+++ b/login.html
@@ -14,22 +14,13 @@
     <script type='text/javascript' src="resources/plugins/jQuery/jQuery-2.2.0.min.js"></script>
     <script type='text/javascript' src="resources/js/config.js"></script>
     <script type='text/javascript' src="resources/js/pages/login.js"></script>
-    <!--dynamic background-->
-    <link rel="stylesheet" href="resources/css/common/dynamicBG.css">
-    <script type='text/javascript' src="resources/js/common/dynamicBG.js"></script>
 
 </head>
 <body class="hold-transition login-page">
-
-<div class="dynamicBG-wrapper">
-    <div class="dynamicBG"></div>
-    <div class="dynamicBG"></div>
-    <div class="dynamicBG"></div>
-</div>
-
+<img id="bg_img" src="resources/img/background.jpg" alt="">
 <div class="login-box">
     <div class="login-logo">
-        <a style=""><b>CLEAR</b>&nbsp;信息发布系统</a>
+        <a style="color: white"><b>CLEAR</b>&nbsp;信息发布系统</a>
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
