--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <!-- /.full-screen -->
 
 <!-- upload按钮-->
-<input id="file" name="file" type="file" multiple accept="image/*, audio/*, video/*, .doc, .docx, .xls, .xlsx, .ppt, .pptx, .pdf"/>
+<input id="file" name="file" type="file" multiple accept="image/*, audio/*, video/*, .doc, .docx, .xls, .xlsx, .ppt, .pptx, .pdf, .zip"/>
 
 <!-- config-->
 <script type='text/javascript' src="resources/js/config.js"></script>
