--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -29,7 +29,8 @@
 				<button type="button" class="btn btn-default btn-sm btn-delete">删除</button>
 			</div>
             <div class="btn-group">
-                <button type="button" class="btn btn-default btn-sm btn-export-offline">导出离线包</button>
+                <button type="button" class="btn btn-primary btn-sm btn-import-offline">导入离线包</button>
+                <button type="button" class="btn btn-default btn-sm btn-export-offline">生成离线包</button>
             </div>
             <div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm" id="chn_submit">提交审核</button>
