--- a/resources/pages/materials/materials_list.html
+++ b/resources/pages/materials/materials_list.html
@@ -18,9 +18,8 @@
                     <li typename="Audio"><a id="mtrAudio"><i class="fa fa-music"></i>  &nbsp;音频</a></li>
                     <li typename="WebText"><a id="mtrText"><i class="fa fa-font"></i> &nbsp;文本</a></li>
                     <li typename="Live"><a id="mtrLive"><i class="fa fa-cloud"></i> 直播</a></li>
+                    <!--<li typename="WebUrl"><a id="mtrWebUrl"><i class="fa fa-cloud"></i> &nbsp;在线网页</a></li>-->
                     <li typename="Office"><a id="mtrOffice"><i class="glyphicon glyphicon-file"></i> Office/PDF</a></li>
-
-                    
 
                     <div class="box-tools pull-right" style="padding: 6px;">
                         <div class="has-feedback">
@@ -28,8 +27,6 @@
                             <span class="glyphicon glyphicon-search form-control-feedback"></span>
                         </div>
                     </div>
-
-
                     <!-- /.box-tools -->
                 </ul>
                 <!-- /.box-header -->
@@ -58,7 +55,8 @@
                             <ul id="ad-material-list" class="dropdown-menu" style="margin-top: 15px;">
                                 <li><a id="mtr_upload"><i class="fa fa-circle-o text-red"></i> 上传</a></li>
                                 <li><a id="mtr_addText" href="#materials/materials_addText"><i class="fa fa-circle-o text-yellow"></i> 添加文本</a></li>
-                                <li><a id="mtr_addLive"><i class="fa fa-circle-o text-light-blue"></i> 添加直播</a></li> 
+                                <li><a id="mtr_addLive"><i class="fa fa-circle-o text-green"></i> 添加直播</a></li>
+                                <li><a id="mtr_addURL"><i class="fa fa-circle-o text-blue"></i> 添加在线网页</a></li>
                             </ul>
                         </div>
 
