--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                                 <p id="bar">
                                 </p>
-                                <a id="repassword" class="index-header-user-option"><i class="fa fa-unlock-alt"></i>修改密码 </a>
+                                <a id="repassword" class="index-header-user-option">修改密码 </a>
                                 <a id="logout" class="index-header-user-option" style="width: 100%;"><i class="glyphicon glyphicon-log-out"></i>退出</a>
                             </li>
 
