--- a/login.html
+++ b/login.html
@@ -30,6 +30,7 @@
         <input id="password" name="password" type="password" class="form-control" placeholder="密码">
         <br/>
         <input id="submit" type="submit" class="btn btn-primary btn-block btn-flat" value="登&nbsp;&nbsp;&nbsp;录">
+        <span id="l_language"><a class="language_zh">中文</a>|<a class="language_en">English</a></span>
         <span id="error_m"></span>
     </div>
     <!-- /.login-box-body -->
