--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- icheck -->
 </head>
-<body class="hold-transition skin-blue sidebar-mini" >
+<body class="hold-transition skin-blue sidebar-mini">
 <c:url value="/j_spring_security_logout" var="logoutUrl"/>
 <!-- Site wrapper -->
 <div class="wrapper">
@@ -78,8 +78,9 @@
                         <a class="dropdown-toggle" data-toggle="dropdown">
                             <!-- <img src="resources/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
                             <!--下面这个地方替换掉java的模板标签-->
-                             <span id="username" class="hidden-xs"></span>
-                            <i class="glyphicon glyphicon-triangle-bottom" style="font-size: 12px; transform: translateY(2px) scale(0.9); margin-left: 4px;"></i>
+                            <span id="username" class="hidden-xs"></span>
+                            <i class="glyphicon glyphicon-triangle-bottom"
+                               style="font-size: 12px; transform: translateY(2px) scale(0.9); margin-left: 4px;"></i>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
@@ -89,7 +90,8 @@
                                 <p id="bar">
                                 </p>
                                 <a id="repassword" class="index-header-user-option">修改密码 </a>
-                                <a id="logout" class="index-header-user-option" style="width: 100%;"><i class="glyphicon glyphicon-log-out"></i>退出</a>
+                                <a id="logout" class="index-header-user-option" style="width: 100%;"><i
+                                        class="glyphicon glyphicon-log-out"></i>退出</a>
                             </li>
 
                         </ul>
@@ -111,6 +113,25 @@
     <!-- Left side column. contains the sidebar -->
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
+        <section class="box-menu">
+            <ul class="box-index-menu">
+                <!--<li id="treeview_term" class="treeview active">-->
+                    <!--<a href="#"><i class="fa fa-dashboard"></i> <span>控制台</span></a>-->
+                    <!--<ul class="treeview-menu">-->
+                        <!--<li class="active"><a id="menu_termlist" href="#terminal/list"><i class="fa fa-television"></i> 终端</a></li>-->
+                        <!--<li><a id="menu_termlog" href="#termlog/list"><i class="fa fa-area-chart"></i> 日志</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--<li id="treeview_term" class="treeview">-->
+                    <!--<a href="#"><i class="fa fa-dashboard"></i> <span>控制台</span></a>-->
+                    <!--<ul class="treeview-menu">-->
+                        <!--<li class="active"><a id="menu_termlist" href="#terminal/list"><i class="fa fa-television"></i> 终端</a></li>-->
+                        <!--<li><a id="menu_termlog" href="#termlog/list"><i class="fa fa-area-chart"></i> 日志</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+            </ul>
+        </section>
+
         <section class="sidebar">
             <ul class="sidebar-menu">
             </ul>
@@ -142,7 +163,8 @@
 <!-- /.full-screen -->
 
 <!-- upload按钮-->
-<input id="file" name="file" type="file" multiple accept="image/*, audio/*, video/*, .doc, .docx, .xls, .xlsx, .ppt, .pptx, .pdf, .zip"/>
+<input id="file" name="file" type="file" multiple
+       accept="image/*, audio/*, video/*, .doc, .docx, .xls, .xlsx, .ppt, .pptx, .pdf, .zip"/>
 
 <!-- config-->
 <script type='text/javascript' src="resources/js/config.js"></script>
@@ -195,7 +217,9 @@
     seajs.config({
         base: "./resources/js/"
     })
-    seajs.use("pages/index" , function(index){ index.init(); })
+    seajs.use("pages/index", function (index) {
+        index.init();
+    })
 </script>
 
 </body>
