--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- icheck -->
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
-<c:url value="/j_spring_security_logout" var="logoutUrl"/>
+<!--<c:url value="/j_spring_security_logout" var="logoutUrl"/>-->
 <!-- Site wrapper -->
 <div class="wrapper">
 
@@ -115,20 +115,6 @@
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="box-menu">
             <ul class="box-index-menu">
-                <!--<li id="treeview_term" class="treeview active">-->
-                    <!--<a href="#"><i class="fa fa-dashboard"></i> <span>控制台</span></a>-->
-                    <!--<ul class="treeview-menu">-->
-                        <!--<li class="active"><a id="menu_termlist" href="#terminal/list"><i class="fa fa-television"></i> 终端</a></li>-->
-                        <!--<li><a id="menu_termlog" href="#termlog/list"><i class="fa fa-area-chart"></i> 日志</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li id="treeview_term" class="treeview">-->
-                    <!--<a href="#"><i class="fa fa-dashboard"></i> <span>控制台</span></a>-->
-                    <!--<ul class="treeview-menu">-->
-                        <!--<li class="active"><a id="menu_termlist" href="#terminal/list"><i class="fa fa-television"></i> 终端</a></li>-->
-                        <!--<li><a id="menu_termlog" href="#termlog/list"><i class="fa fa-area-chart"></i> 日志</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
             </ul>
         </section>
 
@@ -152,7 +138,7 @@
         </div>
         <!--<strong><a href="http://www.cleartv.cn">清鹤科技</a></strong> All rights reserved.-->
         <strong>&nbsp;</strong>
-        <span id="USER-NAME" style="display: none;"><sec:authentication property="name"/></span>
+        <span id="USER-NAME" style="display: none;"></span>
     </footer>
 
 </div>
