--- a/resources/pages/terminal/list.html
+++ b/resources/pages/terminal/list.html
@@ -1,6 +1,6 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
-  <h1>
+  <h1 class="term-box-title">
     终端
   </h1>
 </section>
@@ -57,9 +57,9 @@
 
             <button id="term_refresh" type="button" class="btn btn-default btn-sm"><i class="fa fa-refresh"></i></button>  
             <div id="term-status" class="btn-group pull-right">
-              <button type="button" class="btn btn-default btn-sm" value="running">运行（<span id="term_running"></span>）</button>
-              <button type="button" class="btn btn-default btn-sm" value="shutdown">休眠（<span id="term_shutdown"></span>）</button>
-              <button type="button" class="btn btn-default btn-sm" value="offline">离线（<span id="term_offline"></span>）</button>
+              <button type="button" class="btn btn-default btn-sm term-btn-running" value="running">运行（<span id="term_running"></span>）</button>
+              <button type="button" class="btn btn-default btn-sm term-btn-shutdown" value="shutdown">休眠（<span id="term_shutdown"></span>）</button>
+              <button type="button" class="btn btn-default btn-sm term-btn-offline" value="offline">离线（<span id="term_offline"></span>）</button>
             </div>
           </div>
           <div class="mailbox-messages">
